fix for cut off pages when they're long

--- a/src/less/tree.less
+++ b/src/less/tree.less
@@ -1,7 +1,3 @@
-#tree-container{
-    overflow:hidden;
-}
-
 /* root node */
 #tree-container > .item{
     width:100%;
